--- a/index.html
+++ b/index.html
@@ -4,106 +4,41 @@
     <meta charset="utf-8">
     <title>Omnia Coin Market Cap</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
-
     <link rel= "stylesheet" type= "text/css" href= "style.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src= "logic.js"></script>
-
   </head>
-
   <body>
-
-<!-- Created a container 1 with a navbar Brand and a search button -->
+<!-- Created a container 1 with a navbar brand -->
     <div class="d-flex flex-row container my-container1">
       <nav class="navbar navbar-light" >
         <a class="navbar-brand" id="my-brand">omnia</a>
         <ul class="nav navbar-nav">
-      <li class="active"><a href="#">crypto data</a></li>
-
-    </ul>
-    <!--    <form class="form-inline">
-          <input id="searchInput" class="form-control mr-sm-2" type="search" placeholder="Search Coin" aria-label="Search" >
-          <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    -->
+          <li class="active"><a id="brand2" href="#" >crypto data</a></li>
+        </ul>
       </nav>
     </div>
-
 <!--Created a Flex Box-->
-    <div id="myRow" class="d-flex flex-row my-container2">
+    <div  id="myRow" class="container d-flex flex-row my-container2">
         <div class="p-2">Cryptocurrencies: <span id="currencies"></span></div>
         <div class="p-2">Market Cap: <span id="mCap"></span></div>
         <div class="p-2">24h Vol: <span id="24v"></span></div>
         <div class="p-2">Markets: <span id="mark"></span></div>
+        <div class="p-2">BTC Dominance: <span id="dom"></span></div>
     </div>
-
-
 <!-- This is the title -->
    <div class="container my-container3">
      <div class="row  my-row">
        <div class="col text-center my-col2">
-           <h4 class="title">Top 100 Cryptocurrencies by Market Capitalization</h4>
-           <h6 class="title"><i>Andrés Aedo Bootcamp Project - Ivan on Tech Academy</i></h6>
+           <h2 class="title">Top 100 Cryptocurrencies by Market Capitalization</h2>
+           <h6 class="title"><i>by Andrés Aedo - Bootcamp Project - Ivan on Tech Academy</i></h6>
        </div>
      </div>
      <br>
 
-<!-- This are the buttons that lead to filters, Next 100 and View all, there is also a dropdown button to change currencies-->
-     <div class="row justify-content-center">
-       <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-         <button type="button" class="btn btn-outline-info">Filters</button>
-            <div class="btn-group" role="group">
-             <button id="btnGroupDrop1" type="button" class="btn btn-outline-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">EUR</button>
-               <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                 <a class="dropdown-item" href="#">USD</a>
-                 <a class="dropdown-item" href="#">BTC</a>
-                 <a class="dropdown-item" href="#">ETH</a>
-                 <a class="dropdown-item" href="#">XRP</a>
-                 <a class="dropdown-item" href="#">BCH</a>
-                 <a class="dropdown-item" href="#">LTC</a>
-                </div>
-         </div>
-         <button type="button" class="btn btn-outline-info">Netx 100</button>
-         <button type="button" class="btn btn-outline-info">View All</button>
-       </div>
-     </div>
-   </div>
-
-<br><br>
-<!-- Here starts the main section of the page -->
-<div class="container main-section">
-<!--I am creating a Nav dropdown menu for all the Cryptocurrencies, exchanges and a Whatchlist -->
-  <ul class="nav nav-tabs">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Cryptocurrencies</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Top 100</a>
-            <a class="dropdown-item" href="#">Full List</a>
-            <a class="dropdown-item" href="#">Derivatives</a>
-            <a class="dropdown-item" href="#">DeFi</a>
-            <a class="dropdown-item" href="#">Storage</a>
-            <a class="dropdown-item" href="#">Market Cap by Circulating Supply</a>
-            <a class="dropdown-item" href="#">Market Cap by Total Supply</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Exchanges</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Spot Exchanges</a>
-              <a class="dropdown-item" href="#">Derivatives Exchanges</a>
-            </div>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Whatchlist</a>
-          </li>
-    </ul>
-
-<!--I am creating a Table class sticky to the top and follow the site when scrolling down  -->
-
 <div class="mytable">
 
-    <table id= "coinTable" class= "table sticky table-striped table-hover table-dark">
+    <table id= "coinTable" class= "table sticky table-striped table-hover">
       <tr>
         <th id = "rank" scope="col-1">Rank</th>
         <th id = "image" style="width:40px" scope="col-1"></th>
@@ -119,8 +54,6 @@
 </div>
 
     </div>
-
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
